// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex should have the following style rules 1`] = `
.c0 {
  position: fixed;
  width: 100%;
  height: auto;
  top: unset;
  left: unset;
  bottom: unset;
  right: unset;
  z-index: 1;
}

<div
  className="c0"
>
  <p>
    Hello World
  </p>
</div>
`;

exports[`Flex should have the following style rules when configured 1`] = `
.c0 {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 999;
}

<div
  className="c0"
>
  <p>
    Hello World
  </p>
</div>
`;
